--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Poke_RecyclerView" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+
+    <style name="Theme.Poke_RecyclerView" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Set the background color to black for night theme -->
+        <item name="android:colorBackground">@color/black</item>
+        <!-- Ensure text and other elements are visible against the dark background -->
+        <item name="android:textColor">@color/white</item>
+        <!-- Other theme customizations for night mode -->
     </style>
+
 </resources>
