--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Poke_RecyclerView" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+    <style name="Theme.Poke_RecyclerView" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Set the background color to white for light theme -->
+        <item name="android:colorBackground">@color/white</item>
+        <!-- Other theme customizations -->
     </style>
 
-    <style name="Theme.Poke_RecyclerView" parent="Base.Theme.Poke_RecyclerView" />
+
 </resources>
